deploy/platform/security/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: asterism-default
spec:
  mtls:
    mode: STRICT
