deploy/platform/security/request-authentication.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: asterism-cognito
spec:
  selector:
    matchLabels:
      app.kubernetes.io/part-of: asterism
  jwtRules:
    - issuer: https://cognito-idp.<region>.amazonaws.com/<user-pool-id>
      jwksUri: https://cognito-idp.<region>.amazonaws.com/<user-pool-id>/.well-known/jwks.json
      forwardOriginalToken: true
