deploy/platform/security/opa-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: asterism-opa
spec:
  selector:
    app.kubernetes.io/component: opa
    app.kubernetes.io/name: asterism-opa
    app.kubernetes.io/part-of: asterism
  ports:
    - name: http
      port: 8181
      targetPort: http
