deploy/platform/security/authorization-policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: asterism-api
spec:
  selector:
    matchLabels:
      app.kubernetes.io/part-of: asterism
  action: ALLOW
  rules:
    - to:
        - operation:
            paths:
              - /healthz
    - to:
        - operation:
            methods:
              - GET
            paths:
              - /ui/*
      from:
        - source:
            principals:
              - cluster.local/ns/istio-ingress/sa/default
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-ingress/sa/default
      to:
        - operation:
            methods:
              - GET
            paths:
              - /api/*
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: asterism-auth-proxy
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: auth-proxy
  action: ALLOW
  rules:
    - to:
        - operation:
            methods:
              - GET
            paths:
              - /*
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: asterism-opa
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: opa
  action: ALLOW
  rules:
    - to:
        - operation:
            methods:
              - GET
            paths:
              - /health
    - to:
        - operation:
            methods:
              - POST
            paths:
              - /v1/data/*
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: polaris-shell
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: polaris
  action: ALLOW
  rules:
    - to:
        - operation:
            methods:
              - GET
            paths:
              - /*
